src/test/ui/asm/named-asm-labels.stderr
error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:22:15
   |
LL |         asm!("bar: nop");
   |               ^^^
   |
   = note: `#[deny(named_asm_labels)]` on by default
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:25:15
   |
LL |         asm!("abcd:");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:28:15
   |
LL |         asm!("foo: bar1: nop");
   |               ^^^  ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:32:15
   |
LL |         asm!("foo1: nop", "nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:33:15
   |
LL |         asm!("foo2: foo3: nop", "nop");
   |               ^^^^  ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:35:22
   |
LL |         asm!("nop", "foo4: nop");
   |                      ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:36:15
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:36:28
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |                            ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:41:15
   |
LL |         asm!("foo7: nop; foo8: nop");
   |               ^^^^       ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:43:15
   |
LL |         asm!("foo9: nop; nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:44:20
   |
LL |         asm!("nop; foo10: nop");
   |                    ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:47:15
   |
LL |         asm!("bar2: nop\n bar3: nop");
   |               ^^^^        ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:49:15
   |
LL |         asm!("bar4: nop\n nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:50:21
   |
LL |         asm!("nop\n bar5: nop");
   |                     ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:51:21
   |
LL |         asm!("nop\n bar6: bar7: nop");
   |                     ^^^^  ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:57:13
   |
LL |             blah2: nop
   |             ^^^^^
LL |             blah3: nop
   |             ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:66:19
   |
LL |             nop ; blah4: nop
   |                   ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:80:15
   |
LL |         asm!("blah1: 2bar: nop");
   |               ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:83:15
   |
LL |         asm!("def: def: nop");
   |               ^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:84:15
   |
LL |         asm!("def: nop\ndef: nop");
   |               ^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:85:15
   |
LL |         asm!("def: nop; def: nop");
   |               ^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:93:15
   |
LL |         asm!("fooo\u{003A} nop");
   |               ^^^^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:94:15
   |
LL |         asm!("foooo\x3A nop");
   |               ^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:97:15
   |
LL |         asm!("fooooo:\u{000A} nop");
   |               ^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:98:15
   |
LL |         asm!("foooooo:\x0A nop");
   |               ^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:102:14
   |
LL |         asm!("\x41\x42\x43\x3A\x20\x6E\x6F\x70");
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:110:13
   |
LL |             ab: nop // ab: does foo
   |             ^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:122:14
   |
LL |         asm!(include_str!("named-asm-labels.s"));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

warning: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:132:19
   |
LL |             asm!("warned: nop");
   |                   ^^^^^^
   |
note: the lint level is defined here
  --> $DIR/named-asm-labels.rs:130:16
   |
LL |         #[warn(named_asm_labels)]
   |                ^^^^^^^^^^^^^^^^
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:141:20
   |
LL |     unsafe { asm!(".Lfoo: mov rax, {}; ret;", "nop", const 1, options(noreturn)) }
   |                    ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:147:20
   |
LL |     unsafe { asm!(".Lbar: mov rax, {}; ret;", "nop", const 1, options(noreturn)) }
   |                    ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:155:20
   |
LL |     unsafe { asm!(".Laaa: nop; ret;", options(noreturn)) }
   |                    ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:165:24
   |
LL |         unsafe { asm!(".Lbbb: nop; ret;", options(noreturn)) }
   |                        ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:174:15
   |
LL |         asm!("closure1: nop");
   |               ^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:178:15
   |
LL |         asm!("closure2: nop");
   |               ^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:188:19
   |
LL |             asm!("closure3: nop");
   |                   ^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: aborting due to 35 previous errors; 1 warning emitted

